# course_work_4

./: data_vac.json  main.py  pyproject.toml  utils.py
scr/: work_api.py
