[tool.poetry]
name = "cw4"
version = "0.1.0"
description = ""
authors = ["Nickolay Babulich <nickolas.grn@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
flake8-docstrings = "^1.7.0"
flake8-builtins = "^2.1.0"
python-dotenv = "^1.0.0"
flake8-import-order = "^0.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
